[gd_scene load_steps=5 format=2]

[ext_resource path="res://Images/ball.png" type="Texture" id=1]
[ext_resource path="res://Items/Ball.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.6
bounce = 0.4

[sub_resource type="CircleShape2D" id=1]
radius = 17.8018

[node name="Ball" type="RigidBody2D"]
collision_layer = 64
collision_mask = 145
mass = 0.6
physics_material_override = SubResource( 2 )
contacts_reported = 2
contact_monitor = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
